tests/ui/consts/bad-array-size-in-type-err.stderr
error: the constant `N` is not of type `usize`
  --> $DIR/bad-array-size-in-type-err.rs:2:10
   |
LL |     arr: [i32; N],
   |          ^^^^^^^^ expected `usize`, found `u8`

error[E0308]: mismatched types
  --> $DIR/bad-array-size-in-type-err.rs:7:38
   |
LL |     let _ = BadArraySize::<2> { arr: [0, 0, 0] };
   |                                      ^^^^^^^^^ expected an array with a size of 2, found one with a size of 3

error: the constant `2` is not of type `usize`
  --> $DIR/bad-array-size-in-type-err.rs:7:38
   |
LL |     let _ = BadArraySize::<2> { arr: [0, 0, 0] };
   |                                      ^^^^^^^^^ expected `usize`, found `u8`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0308`.
